Adding a error messages properties file for fr_BE

--- a/src/main/resources/messages_fr_BE.properties
+++ b/src/main/resources/messages_fr_BE.properties
@@ -1,2 +1,2 @@
-email.empty=Email cannot be empty.
-name.empty=Name cannot be empty.
+email.empty=Email ne peut pas être vide.
+name.empty=Nom ne peut pas être vide.
