Adding a save code for user

--- a/src/main/resources/messages_fr_BE.properties
+++ b/src/main/resources/messages_fr_BE.properties
@@ -1,2 +1,3 @@
 email.empty=Email ne peut pas être vide.
 name.empty=Nom ne peut pas être vide.
+usersaved.success=L'information sur l'utilisateur a été enregistrée avec succès!
