Implementing the use case of user already exists when saving user data

--- a/src/main/resources/messages_en.properties
+++ b/src/main/resources/messages_en.properties
@@ -1,3 +1,4 @@
-email.empty=Email cannot be empty.
-name.empty=Name cannot be empty.
-usersaved.success=User information saved successfully!
+email.empty=User's email cannot be empty.
+name.empty=User's name cannot be empty.
+usersaved.success=User's information saved successfully!
+userFound.warning=User's email or name is already present!
