--- a/src/main/resources/messages_fr_BE.properties
+++ b/src/main/resources/messages_fr_BE.properties
@@ -1,3 +1,4 @@
 email.empty=Email ne peut pas être vide.
 name.empty=Nom ne peut pas être vide.
 usersaved.success=L'information sur l'utilisateur a été enregistrée avec succès!
+userFound.warning=L'email ou le nom de l'utilisateur existe déjà!
